<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Carlos D. Vallejo Aranda.</b></string>
    <string name="accept">Aceptar</string>
    <string name="comenzar">Comenzar</string>
    <string name="bienvenida">¡Bienvenido al tutorial de esta app homenaje al videojuego Spyro the dragon!\n \n En ella aprenderás a navegar por su contenido. ¿Estás preparado? ¡Pulsa en Comenzar!</string>
    <string name="personajes">En \"Personajes\" podrás conocer a todos los seres de Spyro The Dragon.</string>
    <string name="mundos">En \"Mundos\" podrás explorar los lugares que componen el universo de Spyro</string>
    <string name="saltar">Saltar guía</string>
    <string name="continuar">Continuar</string>
    <string name="coleccionables">En \"Coleccionables\" encontrarás los ítems que se encuentran a lo largo del juego</string>
    <string name="about">En este icono obtendrás información sobre la app</string>
    <string name="fin_tutorial">¡Has completado el tutorial! Es hora de adentrarse en el mundo de Spyro The Dragon</string>
    <string name="boton_fin_tutorial">¡Empecemos!</string>
    <string name="comenzar_tutorial">Comenzar Guía</string>
</resources>